k8s/monitoring/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: xambook-gateway
      namespace: xambook
      sectionName: https
  hostnames:
    - "grafana.xambook.com"
  rules:
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
