k8s/monitoring/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: grafana-route
  namespace: monitoring

spec:
  parentRefs:
    - name: shared-gateway
      namespace: default

  hostnames:
    - grafana.xambook.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: monitoring-grafana
          port: 80
