k8s/monitoring/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: prometheus-route
  namespace: monitoring

spec:
  parentRefs:
    - name: shared-gateway
      namespace: default

  hostnames:
    - prometheus.xambook.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
